# ocaml-talib

./: .gitignore  .merlin  AUTHORS.txt  INSTALL.txt  README.txt  _oasis  _tags  myocamlbuild.ml  opam  setup.ml  talib.opam
lib/: META  libtalib_stubs.clib  ta_lib_stubs.c  talib.ml  talib.mli  talib.mllib
src/: dune  jbuild  ta_lib_stubs.c  talib.ml  talib.mli
src/config/: discover.ml
test/: dune  jbuild  test.ml
