opam-version: "2.0"
name: "talib"
version: "0.1"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
license: "ISC"
homepage: "http://github.com/vbmithr/ocaml-talib"
bug-reports: "http://github.com/vbmithr/ocaml-talib/issues"
dev-repo: "git://github.com/vbmithr/ocaml-talib.git"

build: [ "dune" "build" "-j" jobs "-p" name ]
depends: [
  "dune" {build & >= "1.0.0"}
]

