(library
 (name        talib)
 (public_name talib)
 (synopsis "TA-Lib : Technical Analysis Library")
 (libraries bigarray)
 (c_names ta_lib_stubs)
 (c_flags (:include c_flags.sexp))
 (c_library_flags (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps    config/discover.exe)
 (action  (run ./config/discover.exe)))
